# CX-Consulting-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CX-Consulting-AI.pem  KILLER_APP_FEATURES.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_OVERVIEW.md  README-APPLE-SILICON.md  README.md  SETUP_SUMMARY.md  SHARING_GUIDE.md  TARIQ_SETUP_INSTRUCTIONS.md  code_files.txt  configure_frontend_for_azure.sh  create_selective_package.sh  create_torrent.sh  cx-consulting-ai.service  cx_agent_proxy.conf  debug_aws_backend.md  deploy_aws.sh  deploy_azure.py  deploy_dynamic_dns_to_aws.sh  deploy_frontend_to_azure.sh  deploy_ssl_to_aws.sh  download_vectorstore.sh  fix_aws_config.sh  fix_model_path.sh  generate_requirements.sh  get_models.sh  install_service.sh  monitor_backend.sh  nginx.conf  optimize_context.sh  package-lock.json  package.json  prepare_for_sharing.sh  production_config.py  pyproject.toml  quick_sync.sh  requirements-apple.txt  (+15 more)
.github/workflows/: azure-static-web-apps-calm-ground-07d8aae0f.yml  azure-static-web-apps-deploy.yml  azure-static-web-apps-jolly-sand-08d33b71e.yml  azure-static-web-apps-polite-glacier-0be86081e.yml  codeql_and_gitleaks.yml  pr_agent.yml  trivy.yml
app/: main.py  redis_manager.py
app/agents/: agent_runner.py  critiquer.py  drafter.py  finalizer.py  retriever.py
app/api/: __init__.py  auth.py  company_profiles.py  deliverables.py  dependencies.py  models.py  projects.py  routes.py  routes.py.bak  routes_new.py  routes_upload.py
app/core/: __init__.py  (+4 more)
docs/: ollama-setup.md
models/: README.md
models_backup_1750090084/: README.md
(+146 files in other folders)
